--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fenix&family=Open+Sans&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Fenix&family=Open+Sans&display=swap'); */
 
 :root {
     --bg-color: #1F2937;
