--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,6 @@
     font-size: 5rem;
     font-family: 'Fenix', serif;
     color: var(--primary-color);
-    margin-right: auto;
-    margin-left: auto;
     margin-top: 0px;
     margin-bottom: 0px;
 }
@@ -24,8 +22,6 @@
     font-size: 1.5rem;
     font-family: 'Open Sans', sans-serif;
     color: var(--secondary-color);
-    margin-right: auto;
-    margin-left: auto;
     margin-top: .2rem;
     margin-bottom: .2rem;
     font-weight: normal;
@@ -39,8 +35,6 @@
 }
 
 .icon {
-    margin-left: auto;
-    margin-right: auto;
     opacity: 0;
     animation: fade-in 2s forwards .75s;
     color: var(--secondary-color);
@@ -52,6 +46,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
+    text-align: center;
 }
 
 .container-col {
