--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,20 +19,28 @@
     opacity: 0;
     animation: fade-in 2s forwards .5s;
     font-size: var(--description-fz);
+    margin: .2rem 0px;
+}
+
+#location {
+    opacity: 0;
+    animation: fade-in 2s forwards 1s;
+}
+
+.text-secondary {
+    color: var(--secondary-color);
     font-family: 'Open Sans', sans-serif;
     font-weight: normal;
-    color: var(--secondary-color);
-    margin: .2rem 0px;
 }
 
 .social {
     margin: 1rem;
     padding: 1rem;
+    opacity: 0;
+    animation: fade-in 2s forwards .75s;
 }
 
 .icon {
-    opacity: 0;
-    animation: fade-in 2s forwards .75s;
     color: var(--secondary-color);
     background-color: transparent;
     border-width: 0px;
@@ -56,6 +64,11 @@
     justify-content: center;
     height: 100%;
     width: 100%;
+}
+
+footer {
+    position: absolute;
+    bottom: 0%;
 }
 
 body {
